# ansible-terraform-project

./: .gitignore  apply-ansible.sh  demo.aws_ec2.yml  ec2.tf  main.tf  pyproject.toml  variables.tf
project/: dependencies.yaml  inventory.aws_ec2.yml  master.yaml  test.playbook.yaml  workers.yaml
